cmake_minimum_required(VERSION 3.10)
project(C++_Game_Development_by_Example)

link_directories(libs/)
include_directories(include/)

add_subdirectory(Chapter_3_SFML_Subproject)
add_subdirectory(Chapter_4_SFML_Game_Creation)
add_subdirectory(Chapter_5_SFML_Game_Finalizing)
add_subdirectory(Chapter_6_Getting_Started_With_OpenGL)
